// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should closed by the Esc key 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw cTRlJa absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          ark
        </h2>
        <div
          class="flex-1"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal should not render if not open 1`] = `<DocumentFragment />`;

exports[`Modal should render a 3x large one 1`] = `
<div>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw jRkhhQ absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          ark
        </h2>
        <div
          class="flex-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal should render a 4x large one 1`] = `
<div>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw jCpCzv absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          ark
        </h2>
        <div
          class="flex-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal should render a 5x large one 1`] = `
<div>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw bHERBC absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          ark
        </h2>
        <div
          class="flex-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal should render a 5x large one 2`] = `
<div>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw bHERBC absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          ark
        </h2>
        <div
          class="flex-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal should render a large one 1`] = `
<div>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw jnoDfx absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          ark
        </h2>
        <div
          class="flex-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal should render a medium one 1`] = `
<div>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw fWjEmW absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          ark
        </h2>
        <div
          class="flex-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal should render a modal with content 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw cTRlJa absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          ark
        </h2>
        <div
          class="flex-1"
        >
          This is the Modal content
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal should render a modal with description 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw cTRlJa absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          ark
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            This is the Modal description
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal should render a modal with overlay 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw cTRlJa absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          ark
        </h2>
        <div
          class="flex-1"
        >
          This is the Modal content
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal should render a small one 1`] = `
<div>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw wLhVq absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          ark
        </h2>
        <div
          class="flex-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal should render a xlarge one 1`] = `
<div>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw Zauxd absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          ark
        </h2>
        <div
          class="flex-1"
        />
      </div>
    </div>
  </div>
</div>
`;
